@@ -8,6 +8,7 @@ Simakov
 TIDYALL
 Thalhammer
 argv
+atomicity
 cmd
 conf
 config
