@@ -6,6 +6,8 @@ Revision history for Code-TidyAll
 
 * Improvements
   - Allow a plugin to be listed multiple times in config with different configuration
+  - Specify order that plugins run (tidiers before validators, then alpha) and document
+    that they are applied atomically
   - Add -r/--recursive flag to process directories recursively
   - In -p/--pipe mode, mirror input to output in case of error (Justin Devuyst)
   - Add --version option
